--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
 		<div class="splashscreen-bg"></div>
 		<div class="tengah">
 			<p>The Wedding Of</p>
-			<h1 style="font-size:80px;color:white;margin-top:-30px;">Arty &amp; Atep </h1>
+			<h1 style="font-size:80px;color:white;margin-top:-30px;">Sylga &amp; Surya </h1>
 			<p style="margin-top:30px;">Kepada Yth.<br>
+				<p id="kepada"></p>
 				<a href="#" onclick="return OpenInvitation();">
 					<button class="btn-depan btn-4 btn-sep-depan icon-send popup1_open" data-popup-ordinal="0"
 						id="open_92089009">BUKA</button>
@@ -103,8 +104,8 @@
 										<p>The Wedding Of</p>
 
 										<h1 style="margin-top:-40px">
-											Arty &amp; Atep </h1>
-										<p><span>06 - 06 - 2021</span></p>
+											Sylga &amp; Surya </h1>
+										<p><span>17 - 06 - 2023</span></p>
 										<p>
 											<a href="#fh5co-couple" class="icon-scroll"></a>
 										</p>
@@ -134,29 +135,29 @@
 				</div>
 				<div class="couple-wrap animate-box fadeInUp animated-fast">
 					<div class="couple-half">
-						<div class="groom"> <img src="img/bride.png?nocache=1440" alt="groom" class="img-responsive">
+						<div class="groom"> <img src="img/bride.jpg?nocache=1440" alt="groom" class="img-responsive">
 						</div>
 						<div class="desc-groom">
 							<h3 style="color:#304058;">
-								Arty Artya Melinda</h3>
+								Sylga Nur Anissa</h3>
 							<!-- untuk deskripsi mempelai -->
 							<p>
 								<i style="font-size:12px;">Putri dari :</i>
 								<br>
-								Bapak Arbi Sahtiadin &amp; Ibu Oneng Nurhayati </p>
+								Bpk. Agus Ridawijaya &amp; Ibu Henhen Hendarsah </p>
 						</div>
 					</div>
 					<p class="heart text-center"><i class="icon-heart2" style="color:#304058;"></i></p>
 					<div class="couple-half">
-						<div class="bride"> <img src="img/groom.png?nocache=1440" alt="groom" class="img-responsive">
+						<div class="bride"> <img src="img/groom.jpg" alt="groom" class="img-responsive">
 						</div>
 						<div class="desc-bride">
 							<h3 style="color:#304058;">
-								Atep Jaenudin</h3>
+								Muhammad Surya Handika</h3>
 							<!-- untuk deskripsi mempelai -->
 							<p><i style="font-size:12px;">Putra dari :</i>
 								<br>
-								Bapak H Enyang &amp; Ibu H Atik </p>
+								Bpk. Dadang Suhanda &amp; Ibu Rusmanah </p>
 						</div>
 					</div>
 				</div>
@@ -196,16 +197,14 @@
 										<div class="event-col">
 											<i class="icon-clock"></i>
 											<span>
-												80.00 Pagi </span>
+												08.00 Pagi </span>
 										</div>
-										<div class="event-col"> <i class="icon-calendar"></i> <span>Minggu, 6
-												Juni 2021</span> </div>
+										<div class="event-col"> <i class="icon-calendar"></i> <span>Sabtu, 17 Juni 2023</span> </div>
 										<p>
 											<label style="font-weight:normal; font-size:22px;">
-												Gedung Herlina Mutiara </label>
+												Gedung Aula SMAN 15 Bandung </label>
 											<br>
-											Jl. Pramuka, Bojong, Karangtengah, Kabupaten Cianjur, Jawa Barat
-											43281 </p>
+											Jl. Sarimanis No.1, Sarijadi, Kec. Sukasari, Kota Bandung, Jawa Barat 40151 </p>
 									</div>
 								</div>
 								<div class="col-md-6 col-sm-6 text-center" style="margin-bottom:10px;">
@@ -213,25 +212,14 @@
 										<h3>Resepsi</h3>
 										<div class="event-col">
 											<i class="icon-clock"></i> <span>
-												10.00 - 14.00 </span> </div>
-										<div class="event-col"> <i class="icon-calendar"></i> <span>Minggu, 6
-												Juni 2021</span> </div>
+												10.00 - 13.00 </span> </div>
+										<div class="event-col"> <i class="icon-calendar"></i> <span>Sabtu, 17 Juni 2023</span> </div>
 										<p>
 											<label style="font-weight:normal; font-size:22px;">
-												Gedung Herlina Mutiara </label>
+												Gedung Aula SMAN 15 Bandung </label>
 											<br>
-											Jl. Pramuka, Bojong, Karangtengah, Kabupaten Cianjur, Jawa Barat
-											43281 </p>
+											Jl. Sarimanis No.1, Sarijadi, Kec. Sukasari, Kota Bandung, Jawa Barat 40151 </p>
 									</div>
-								</div>
-
-
-								<div class="col-md-8 col-md-offset-2 text-center animate-box fadeInUp animated-fast">
-									<a href="https://youtu.be/Ev-Rgy8HabA" target="_blank"
-										class="streaming mdc-button mdc-button--raised">
-										<i class="material-icons mdc-button__icon">play_arrow</i>
-										LIVE STREAMING
-									</a>
 								</div>
 
 							</div>
@@ -260,14 +248,12 @@
 								<div class="timeline-panel">
 									<div class="timeline-heading">
 										<h3 class="timeline-title">Pertama bertemu</h3>
-										<img src="img/album1.png" alt="img" class="timeline-img">
-										<span class="date">14 Januari 2020</span>
+										<img src="img/album1.jpeg" alt="img" class="timeline-img">
+										<span class="date">2020</span>
 									</div>
 									<div class="timeline-body">
 										<p>
-											Waktu Pertama Kali
-											Kulihat Dirimu Hadir
-											Rasa hati ini inginkan dirimu </p>
+											Pertama kali bertemu saat </p>
 									</div>
 								</div>
 							</li>
@@ -280,7 +266,7 @@
 								<div class="timeline-panel">
 									<div class="timeline-heading">
 										<h3 class="timeline-title">Jatuh Cinta</h3>
-										<img src="img/album2.png" alt="img" class="timeline-img">
+										<img src="img/album2.jpeg" alt="img" class="timeline-img">
 										<span class="date">15 Maret 2020</span>
 									</div>
 									<div class="timeline-body">
@@ -300,8 +286,8 @@
 								</div>
 								<div class="timeline-panel">
 									<div class="timeline-heading">
-										<h3 class="timeline-title">Ta'aruf</h3>
-										<img src="img/album3.png" alt="img" class="timeline-img"><span class="date">1
+										<h3 class="timeline-title">Khitbah</h3>
+										<img src="img/album3.jpeg" alt="img" class="timeline-img"><span class="date">1
 											Mei 2020</span>
 									</div>
 									<div class="timeline-body">
@@ -313,29 +299,6 @@
 							</li>
 							<!--TUTUP PHP -->
 							<!-- GET DATA -->
-							<li class="animate-box fadeInUp animated-fast">
-								<div class="timeline-badge"
-									style="background-color:#304058; background-image:url(img/couple-1.png);">
-								</div>
-								<div class="timeline-panel">
-									<div class="timeline-heading">
-										<h3 class="timeline-title">Khitbah</h3>
-										<img src="img/album4.png" alt="img" class="timeline-img">
-										<span class="date">16 Mei 2020</span>
-									</div>
-									<div class="timeline-body">
-										<p>
-											Terimalah lagu ini dari orang biasa
-											Tapi cintaku padamu luar biasa
-											Aku tak punya bunga
-											Aku tak punya harta
-											Yang ku punya hanyalah
-											Hati yang setia.. Tulus.. Padamu.. :) </p>
-									</div>
-								</div>
-							</li>
-							<!-- ELSE -->
-							<!--TUTUP PHP -->
 						</ul>
 					</div>
 				</div>
@@ -354,8 +317,8 @@
 							<!-- GET DATA -->
 							<!-- GET DATA -->
 							<li class="one-third animate-box fadeIn animated-fast" data-animate-effect="fadeIn"
-								style="background-image: url(img/album1.png">
-								<a href="img/album1.png" data-lightbox="roadtrip">
+								style="background-image: url('img/album (1).jpg')">
+								<a href="img/album (1).jpg" data-lightbox="roadtrip">
 									<div class="case-studies-summary"> <span></span>
 										<h2></h2>
 									</div>
@@ -364,8 +327,8 @@
 							<!-- CLOSE DATA -->
 							<!-- GET DATA -->
 							<li class="one-third animate-box fadeIn animated-fast" data-animate-effect="fadeIn"
-								style="background-image: url(img/album2.png">
-								<a href="img/album2.png" data-lightbox="roadtrip">
+								style="background-image: url('img/album (2).jpg')">
+								<a href="img/album (2).jpg" data-lightbox="roadtrip">
 									<div class="case-studies-summary"> <span></span>
 										<h2></h2>
 									</div>
@@ -374,8 +337,8 @@
 							<!-- CLOSE DATA -->
 							<!-- GET DATA -->
 							<li class="one-third animate-box fadeIn animated-fast" data-animate-effect="fadeIn"
-								style="background-image: url(img/album3.png">
-								<a href="img/album3.png" data-lightbox="roadtrip">
+								style="background-image: url('img/album (3).jpg')">
+								<a href="img/album (3).jpg" data-lightbox="roadtrip">
 									<div class="case-studies-summary"> <span></span>
 										<h2></h2>
 									</div>
@@ -384,8 +347,8 @@
 							<!-- CLOSE DATA -->
 							<!-- GET DATA -->
 							<li class="one-third animate-box fadeIn animated-fast" data-animate-effect="fadeIn"
-								style="background-image: url(img/album4.png">
-								<a href="img/album4.png" data-lightbox="roadtrip">
+								style="background-image: url('img/album (4).jpg')">
+								<a href="img/album (4).jpg" data-lightbox="roadtrip">
 									<div class="case-studies-summary"> <span></span>
 										<h2></h2>
 									</div>
@@ -394,8 +357,8 @@
 							<!-- CLOSE DATA -->
 							<!-- GET DATA -->
 							<li class="one-third animate-box fadeIn animated-fast" data-animate-effect="fadeIn"
-								style="background-image: url(img/album5.png">
-								<a href="img/album5.png" data-lightbox="roadtrip">
+								style="background-image: url('img/album (5).jpg')">
+								<a href="img/album (5).jpg" data-lightbox="roadtrip">
 									<div class="case-studies-summary"> <span></span>
 										<h2></h2>
 									</div>
@@ -404,24 +367,14 @@
 							<!-- CLOSE DATA -->
 							<!-- GET DATA -->
 							<li class="one-third animate-box fadeIn animated-fast" data-animate-effect="fadeIn"
-								style="background-image: url(img/album6.png">
-								<a href="img/album6.png" data-lightbox="roadtrip">
+								style="background-image: url('img/album (6).jpg')">
+								<a href="img/album (6).jpg" data-lightbox="roadtrip">
 									<div class="case-studies-summary"> <span></span>
 										<h2></h2>
 									</div>
 								</a>
 							</li>
 							<!-- CLOSE DATA -->
-
-
-							<!-- GET DATA YT -->
-							<div class="videoWrapper" style="width:100%;">
-								<center>
-									<object data="https://www.youtube.com/embed/hrVyGEvVu7k"> </object>
-								</center>
-							</div>
-							<!-- CLOSE DATA -->
-
 
 						</ul>
 					</div>
@@ -436,8 +389,8 @@
 						<h1 class="color-putih" style="margin-top:30px;">Find Us</h1>
 
 						<p style="color:#fff;">
-							Gedung Herlina Mutiara <br>
-							Jl. Pramuka, Bojong, Karangtengah, Kabupaten Cianjur, Jawa Barat 43281 </p>
+							Gedung Aula SMAN 15 Bandung <br>
+							Jl. Sarimanis No.1, Sarijadi, Kec. Sukasari, Kota Bandung, Jawa Barat 40151 </p>
 					</div>
 				</div>
 				<div class="row">
@@ -477,7 +430,7 @@
 									</style>
 									<div style="margin-bottom:50px;" id="maps">
 										<iframe width="100%" height="450px" frameborder="0" style="border:0"
-											src="https://www.google.com/maps/embed/v1/place?q=-6.794355,107.172731&amp;key=AIzaSyBkXrQtu34bjG_8Apa0cvNENa_7frfCE2w">
+											src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15844.418641530583!2d107.5740638!3d-6.878063!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e6826486c83b%3A0xadcc971a9ebb17ff!2sSMA%20Negeri%2015%20Bandung!5e0!3m2!1sid!2sid!4v1683087373459!5m2!1sid!2sid">
 										</iframe>
 									</div>
 								</div>
@@ -490,7 +443,7 @@
 
 
 		<footer>
-			<p>Copyright 2022. <a href="https://github.com/IkkiRama/">Rifki Romadhan</a>. All Right Revese</p>
+			<p>Copyright 2023. <a href="https://github.com/IkkiRama/">Sylga & Surya</a>. All Right Revese</p>
 		</footer>
 
 
@@ -598,6 +551,23 @@
 
 	<!--end script mute-->
 
+	<script>
+		function GetURLParameter(sParam)
+		{
+			var sPageURL = window.location.search.substring(1);
+			var sURLVariables = sPageURL.split('&');
+			for (var i = 0; i < sURLVariables.length; i++) 
+			{
+				var sParameterName = sURLVariables[i].split('=');
+				if (sParameterName[0] == sParam) 
+				{
+					return sParameterName[1];
+				}
+			}
+		}
+		var kepada = GetURLParameter('kepada');
+		document.getElementById("kepada").innerHTML = kepada;
+	</script>
 
 
 </body>
