--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
 	<meta charset="utf-8">
-	<title>Wedding Invitation - Atep &amp; Arty </title>
+	<title>Wedding Invitation - Sylga &amp; Surya </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 
