--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta property="og:image" content="img/kita.png">
 	<meta property="og:image:width" content="300">
 	<meta property="og:image:height" content="300">
-	<meta property="og:title" content="Wedding Invitation - Atep &amp; Arty ">
+	<meta property="og:title" content="Wedding Invitation - Sylga &amp; Surya ">
 	<meta property="og:description" content="Hello ! Kamu Di Undang..">
 	<meta property="og:type" content="article">
 	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
