--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	<!-- END SPLASHSCREEN -->
 
 	<!-- ============== MUSIK =============== -->
-	<audio loop="true" src="musik/musik.mp3" id="audio"></audio>
+	<audio autoplay loop="true" src="musik/musik1.mp3" id="audio"></audio>
 	<!-- ============== MUSIK =============== -->
 
 	<div style="display: none;" id="page"><a href="#"
