update kisah cinta

--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
 									</div>
 									<div class="timeline-body">
 										<p>
-											Pertama kali bertemu saat </p>
+											Pertama kali kami bertemu di dalam satu pekerjaan yang sama. Awalnya kami tidak saling mengenal. Saat itu, kami hanya saling menatap satu sama lain, dan berbicara seputar pekerjaan yang sedang kami kerjakan saja.
+										 </p>
 									</div>
 								</div>
 							</li>
@@ -267,14 +268,12 @@
 									<div class="timeline-heading">
 										<h3 class="timeline-title">Jatuh Cinta</h3>
 										<img src="img/album2.jpeg" alt="img" class="timeline-img">
-										<span class="date">15 Maret 2020</span>
+										<span class="date">2021-2022</span>
 									</div>
 									<div class="timeline-body">
 										<p>
-											Hati tenang mendengar
-											suara indah menyapa
-											Geloranya hati ini
-											Tak ku sangka.. </p>
+											2021 adalah awal permulaan Surya menyukai Sylga, tetapi tidak ada satu orangpun yang tau kalau Surya menyukai Sylga. 2022 adalah tahun dimana Surya dan Sylga mulai mengenal satu sama lain. Lantas Surya pun mulai mendekati Sylga. Pada bulan Mei 2022 Surya mengenalkan Sylga kepada keluarganya, begitupun Sylga melakukan hal yang sama.
+										</p>
 									</div>
 								</div>
 							</li>
@@ -288,12 +287,12 @@
 									<div class="timeline-heading">
 										<h3 class="timeline-title">Khitbah</h3>
 										<img src="img/album3.jpeg" alt="img" class="timeline-img"><span class="date">1
-											Mei 2020</span>
+											2023</span>
 									</div>
 									<div class="timeline-body">
 										<p>
-											Rasa ini.. tak tertahan..
-											Hati ini..slalu untukmu.. </p>
+											Setelah menjalin hubungan selama 9 bulan, Surya pun melamar Sylga pada tanggal 18 Februari 2023. Dan kami sepakat untuk mengikat dan mengesahkan hubungan kami dengan ikatan pernikahan yang akan dilaksanakan pada tanggal 17 Juni 2023.
+										</p>
 									</div>
 								</div>
 							</li>
