--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 								<div class="timeline-panel">
 									<div class="timeline-heading">
 										<h3 class="timeline-title">Khitbah</h3>
-										<img src="img/album3.jpeg" alt="img" class="timeline-img"><span class="date">1
+										<img src="img/album3.jpeg" alt="img" class="timeline-img"><span class="date">
 											2023</span>
 									</div>
 									<div class="timeline-body">
