--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	<!-- END SPLASHSCREEN -->
 
 	<!-- ============== MUSIK =============== -->
-	<audio autoplay loop="true" src="musik/musik1.mp3" id="audio"></audio>
+	<!-- <audio autoplay loop="true" src="musik/musik1.mp3" id="audio"></audio> -->
 	<!-- ============== MUSIK =============== -->
 
 	<div style="display: none;" id="page"><a href="#"
@@ -447,9 +447,9 @@
 
 
 		<!-- MUTE BUTTON -->
-		<a id="mute" href="#/" onclick="mute()" class="floatmute">
+		<!-- <a id="mute" href="#/" onclick="mute()" class="floatmute">
 			<i color="#fff" class="fa fa-volume-up my-float"></i>
-		</a>
+		</a> -->
 		<!-- MUTE BUTTON -->
 
 	</div>
